[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"

[tool]

    [tool.poetry]
        name = "apolloscope"
        version = "0.2.0"
        description = ""
        authors = ["Trong-Lanh <t-lanh.nguyen@etu.uca.fr>"]
        repository = "https://github.com/NTL-Remi/ApolloScope"

        [tool.poetry.dependencies]
            einops = "^0.3.0"
            loguru = "^0.5.3"
            matplotlib = "^3.3.4"
            pandas = "^1.2.2"
            Pillow = "^8.1.0"
            python = "^3.9"
            rich = "^9.13.0"
            streamlit = "^0.77.0"
            torch = "^1.8.0"
            torchvision = "^0.9.1"

        [tool.poetry.dev-dependencies]
            bpython = "^0.21"
            jupyterlab = "^3.0.14"
            jupytext = "^1.11.1"
            pytest = "^6.2.2"
            Sphinx = "^3.5.4"
            sphinx-rtd-theme = "^0.5.2"
            sphinxcontrib-mermaid = "^0.6.3"
